new pointer method

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
     </style>
     <script src="lib/jquery.js"></script>
-    <script src="lib/hammer.js"></script>
+    <script src="lib/pointerevents.js"></script>
     <script src="lib/pixi.js"></script>
     <script src="lib/howler.js"></script>
     <script src="lib/signals.js"></script>
