--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <script src="lib/pixi.js"></script>
     <script src="lib/howler.js"></script>
     <script src="lib/signals.js"></script>
+    <script src="src/EventHandler.js"></script>
+    <script src="src/State.js"></script>
+    <script src="src/Behavior.js"></script>
+    <script src="src/SimulationObject.js"></script>
 </head>
 <body>
 </body>
