now using fluent

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <script src="src/EventHandler.js"></script>
     <script src="src/State.js"></script>
     <script src="src/Behavior.js"></script>
+    <script src="src/Prefab.js"></script>
+    <script src="src/PrefabFluent.js"></script>
     <script src="src/SimulationObject.js"></script>
 </head>
 <body>
