--- a/index.html
+++ b/index.html
@@ -25,4 +25,5 @@
 </body>
 <script src="src/origami.js"></script>
 <script src="game.js"></script>
+<!-- <script src="serializationTestGame.js"></script> -->
 </html>
